# teensyopt

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  annotated.html  annotated_dup.js  classes.html  classteensymat_1_1Matrix-members.html  classteensymat_1_1Matrix.html  classteensymat_1_1Matrix.js  dir_3206ae9e333b1369241f4edf8209fb3c.html  dir_3206ae9e333b1369241f4edf8209fb3c.js  dir_3694a7538830cd0f4242c7d002fae031.html  dir_3694a7538830cd0f4242c7d002fae031.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c524dcdc42e727aa11c13c54954ab2d5.html  dir_c524dcdc42e727aa11c13c54954ab2d5.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dcfffd1be9b1d8c6cb31713cb0a0f0f6.html  dir_dcfffd1be9b1d8c6cb31713cb0a0f0f6.js  files.html  functions.html  functions_func.html  functions_rela.html  index.html  matrix__core_8h_source.html  matrix__core_8hpp_source.html  menudata.js  navtreedata.js  navtreeindex0.js
.github/workflows/: doxygen_deploy.yml  run_tests.yml
include/TeensyOpt/TeensyMat/: matrix_core.hpp
include/teensymat/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  related_0.js  searchdata.js
src/: CMakeLists.txt
src/teensymat/: CMakeLists.txt  matrix_core.h
tests/: CMakeLists.txt  test_matrix.cpp
tests/src/: test_matrix.cpp
